--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript">
         head.js("js/freeboard_plugins.min.js",
                 // *** Load more plugins here ***
+                "plugins/thirdparty/mqtt/mqtt.paho.plugin.js",
                 function(){
                     $(function()
                     { //DOM Ready
